tests/invalid/simple/ListDefine_CompileFail_1.whiley
define [int] as intset

void System::main([string] args):
     intset is
     is = {1,2,3,4}
     print str(|il|)
     print str(is ∪ {5})
